Added media queries for mobile, added meta data and alt descriptions

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Erica Chambers is an up-and-coming front-end developer experienced in HTML, CSS, JavaScript, GitHub and Webhosting."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,7 +20,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="src/styles.css" />
-    <title>Advanced HTML/CSS Homework</title>
+    <title>Front-end Developer - Erica Chambers</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -47,16 +51,20 @@
     <h1 class="text-center">Erica Chambers</h1>
     <h3>🇺🇸 Front-end developer, based in America</h3>
     <div class="nav mb-5">
-      <a href="about.html#contact" class="contact">contact me</a>
-      <a href="about.html" class="about-me-btn">about me</a>
+      <a href="about.html#contact" class="contact" title="Contact Erica"
+        >contact me</a
+      >
+      <a href="about.html" class="about-me-btn" title="Learn more about Erica"
+        >about me</a
+      >
     </div>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
           <img
             src="src/images/world clock.png"
-            class="img-fluid rounded"
-            alt=""
+            class="img-fluid rounded home-img"
+            alt="World clock app screenshot"
           />
         </div>
         <div class="col-md-6">
@@ -67,8 +75,10 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="mt-5">
-            <a href="#" class="primary-link">Launch App</a>
+          <div class="mt-5 primary-btn">
+            <a href="#" class="primary-link" title="View World Clock App"
+              >Launch App</a
+            >
           </div>
         </div>
       </div>
@@ -81,15 +91,17 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="mb-5 mt-5">
-            <a href="#" class="primary-link">Launch App</a>
+          <div class="mb-5 mt-5 primary-btn">
+            <a href="#" class="primary-link" title="View Weather App"
+              >Launch App</a
+            >
           </div>
         </div>
         <div class="col-md-6">
           <img
             src="src/images/weather app.png"
-            class="img-fluid rounded"
-            alt=""
+            class="img-fluid rounded home-img"
+            alt="Weather app screenshot"
           />
         </div>
       </div>
@@ -97,8 +109,8 @@
         <div class="col-md-6">
           <img
             src="src/images/Hobby App.png"
-            class="img-fluid rounded"
-            alt=""
+            class="img-fluid rounded home-img"
+            alt="Hobby app screenshot"
           />
         </div>
         <div class="col-md-6">
@@ -109,8 +121,10 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="mt-5">
-            <a href="#" class="primary-link">Launch App</a>
+          <div class="mt-5 primary-btn">
+            <a href="#" class="primary-link" title="View Hobby App"
+              >Launch App</a
+            >
           </div>
         </div>
       </div>
