--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Erica Chambers is an up-and-coming front-end developer experienced in HTML, CSS, JavaScript, GitHub and Webhosting."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,7 +20,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="src/styles.css" />
-    <title>Advanced HTML/CSS Homework</title>
+    <title>About Me - Erica Chambers</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -60,21 +64,21 @@
           <img
             src="src/images/world clock.png"
             class="img-fluid p-2 shadow rounded"
-            alt=""
+            alt="World clock app screenshot"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="src/images/weather app.png"
             class="img-fluid p-2 shadow rounded"
-            alt=""
+            alt="Weather app screenshot"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="src/images/Hobby App.png"
             class="img-fluid p-2 shadow rounded"
-            alt=""
+            alt="Hobby app screenshot"
           />
         </div>
       </div>
