Added padding to footer

--- a/about.html
+++ b/about.html
@@ -83,9 +83,11 @@
         </div>
       </div>
     </div>
-    <div id="contact">
-      <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:erica@test.com" class="email-link">erica@test.com</a>
-    </div>
+    <footer>
+      <div id="contact">
+        <h2 class="text-center">📮 Contact me</h2>
+        <a href="mailto:erica@test.com" class="email-link">erica@test.com</a>
+      </div>
+    </footer>
   </body>
 </html>
